# rustHTMX

./: Cargo.toml
src/: main.rs
