[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
tokio = {version = "1.36.0", features = ["full"]}
rust-embed="8.3.0"
mime_guess = "2.0.4"
config = "0.13"
serde = { version = "1.0.194", features = ["derive"]}
askama = "0.12.1"
askama_actix = "0.14.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[profile.release]
codegen-units = 1
lto = "fat"

